--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Doe || Home</title>
+    <title>Bahare Dadrasi || Home</title>
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -624,7 +624,9 @@
         </li>
       </ul>
       <!-- end of footer social icons -->
-      <p>&copy; <span id="date">2022</span> john doe. all rights reserved.</p>
+      <p>
+        &copy; <span id="date">2022</span> Bahare Dadrasi. all rights reserved.
+      </p>
     </footer>
     <script src="./js/app.js"></script>
   </body>
