--- a/projects.html
+++ b/projects.html
@@ -158,7 +158,9 @@
         </li>
       </ul>
       <!-- end of footer social icons -->
-      <p>&copy; <span id="date">2022</span> john doe. all rights reserved.</p>
+      <p>
+        &copy; <span id="date">2022</span> Bahare Dadrasi. all rights reserved.
+      </p>
     </footer>
     <script src="./js/app.js"></script>
   </body>
