fix single project height

--- a/projects.html
+++ b/projects.html
@@ -104,7 +104,7 @@
       </div>
       <!-- end of section title -->
     </header>
-    <section class="section">
+    <section class="section project-section">
       <div class="section-center project-page-center">
         <!-- single project -->
         <article class="single-project">
