add cocktail to project page

--- a/projects.html
+++ b/projects.html
@@ -109,19 +109,20 @@
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/project-1.jpeg" alt="single project" />
-            <a href="#"><i class="fas fa-home"></i></a>
+            <img
+              src="https://www.thecocktaildb.com/images/media/drink/l3cd7f1504818306.jpg"
+              alt="bahare dadrasi cocktail"
+            />
+            <a href="./cocktail" target="_blank"><i class="fas fa-home"></i></a>
           </div>
           <div class="project-details">
-            <h4>project name</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
-              eveniet amet odit aperiam, provident cum possimus sapiente minus
-              quos! Ipsum?
-            </p>
+            <h4>cocktail</h4>
+            <p>cocktail project helps you find your favorite drink!</p>
             <div class="project-footer">
               <span><i class="fab fa-github"></i></span>
-              <a href="">source code</a>
+              <a href="https://github.com/baharedadrasi/cocktail-react"
+                >source code</a
+              >
             </div>
           </div>
         </article>
