add target attribiute

--- a/projects.html
+++ b/projects.html
@@ -120,7 +120,9 @@
             <p>cocktail project helps you find your favorite drink!</p>
             <div class="project-footer">
               <span><i class="fab fa-github"></i></span>
-              <a href="https://github.com/baharedadrasi/cocktail-react"
+              <a
+                href="https://github.com/baharedadrasi/cocktail-react"
+                target="_blank"
                 >source code</a
               >
             </div>
