add pagination section to projects page

--- a/projects.html
+++ b/projects.html
@@ -130,6 +130,32 @@
         </article>
 
         <!-- end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img
+              src="./images/pagination.jpeg"
+              alt="bahare dadrasi pagination"
+            />
+            <a href="./pagination" target="_blank"
+              ><i class="fas fa-home"></i
+            ></a>
+          </div>
+          <div class="project-details">
+            <h4>pagination</h4>
+            <p>pagination page shows how many pages a project has</p>
+            <div class="project-footer">
+              <span><i class="fab fa-github"></i></span>
+              <a
+                href="https://github.com/baharedadrasi/cocktail-react"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+
+        <!-- end of single project -->
       </div>
     </section>
     <!-- footer -->
