--- a/projects.html
+++ b/projects.html
@@ -128,7 +128,6 @@
             </div>
           </div>
         </article>
-
         <!-- end of single project -->
         <!-- single project -->
         <article class="single-project">
@@ -147,14 +146,36 @@
             <div class="project-footer">
               <span><i class="fab fa-github"></i></span>
               <a
-                href="https://github.com/baharedadrasi/cocktail-react"
+                href="https://github.com/baharedadrasi/pagination"
                 target="_blank"
                 >source code</a
               >
             </div>
           </div>
         </article>
-
+        <!-- end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/markdown.png" alt="bahare dadrasi markdown" />
+            <a href="./markdown" target="_blank"><i class="fas fa-home"></i></a>
+          </div>
+          <div class="project-details">
+            <h4>markdown</h4>
+            <p>
+              Markdown is a lightweight markup language for creating formatted
+              text using a plain-text editor.
+            </p>
+            <div class="project-footer">
+              <span><i class="fab fa-github"></i></span>
+              <a
+                href="https://github.com/baharedadrasi/markdown-react"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
         <!-- end of single project -->
       </div>
     </section>
