add search  github users project

--- a/projects.html
+++ b/projects.html
@@ -177,6 +177,36 @@
           </div>
         </article>
         <!-- end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img
+              src="./images/search-github-user.png"
+              alt="bahare dadrasi search github users"
+            />
+            <a
+              href="https://bahare-dadrasi-search-github-users-react.netlify.app/"
+              target="_blank"
+              ><i class="fas fa-home"></i
+            ></a>
+          </div>
+          <div class="project-details">
+            <h4>search github users</h4>
+            <p>
+              Do you want to search github users and find them? if so, let's get
+              started
+            </p>
+            <div class="project-footer">
+              <span><i class="fab fa-github"></i></span>
+              <a
+                href="https://github.com/baharedadrasi/github-search-user-react"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!-- end of single project -->
       </div>
     </section>
     <!-- footer -->
