--- a/projects.html
+++ b/projects.html
@@ -207,6 +207,33 @@
           </div>
         </article>
         <!-- end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img
+              src="./images/comfy-sloth.png"
+              alt="bahare dadrasi comfy sloth store"
+            />
+            <a
+              href="https://bahare-dadrasi-comfy-store-react.netlify.app"
+              target="_blank"
+              ><i class="fas fa-home"></i
+            ></a>
+          </div>
+          <div class="project-details">
+            <h4>furniture</h4>
+            <p>search furniture and purchase them</p>
+            <div class="project-footer">
+              <span><i class="fab fa-github"></i></span>
+              <a
+                href="https://github.com/baharedadrasi/comfy-store-react"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!-- end of single project -->
       </div>
     </section>
     <!-- footer -->
