added jobster project

--- a/projects.html
+++ b/projects.html
@@ -234,6 +234,30 @@
           </div>
         </article>
         <!-- end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/jobster.png" alt="bahare dadrasi jobster" />
+            <a
+              href="https://bahare-dadrasi-jobster-react.netlify.app"
+              target="_blank"
+              ><i class="fas fa-home"></i
+            ></a>
+          </div>
+          <div class="project-details">
+            <h4>jobster</h4>
+            <p>a dashboard for jobs</p>
+            <div class="project-footer">
+              <span><i class="fab fa-github"></i></span>
+              <a
+                href="https://github.com/baharedadrasi/jobster-react"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!-- end of single project -->
       </div>
     </section>
     <!-- footer -->
